fixed code so background shows properly instead of having white space on the bottom

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,7 +21,8 @@ body {
   color: #457b9d;
   font-size: 24px;
   font-family: 'Source Sans 3', sans-serif;
-
+  background-color: #ffffff;
+  background-image: url(/images/nav-background.png);
 }
 
 /*
@@ -40,17 +41,14 @@ main {
   display: flex;
   flex-direction: column;
   width: 60%;
-
 }
 
 .row-layout {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  padding-left: 12%;
-  padding-right: 12%;
-  background-color: #ffffff;
-  background-image: url(/images/nav-background.png);
+  align-items: stretch;
+  padding-left: 10rem;
+  padding-right: 10rem;
 }
 
 /* Top of Page button */
