--- a/public/styles/media-queries.css
+++ b/public/styles/media-queries.css
@@ -36,18 +36,16 @@
     margin-left: 0.7rem;
   }
 
-
   #profile-header {
-    width: 100%;
-    height: 15rem;
+    width: 100vw;
+    height: 20vh;
     border-radius: 0%;
     flex-direction: column;
     justify-content: start;
-    align-items: center;
     background-color: #1d3557;
+    box-shadow: none;
     position: sticky;
     top: 0;
-    box-shadow: none;
   }
 
   #profile-header img {
@@ -154,6 +152,7 @@
   #counter {
     font-size: 1.2rem;
   }
+
 }
 
 /* Desktop styles */
@@ -181,4 +180,5 @@
   #profile-header span {
     font-size: 3rem;
   }
+
 }
