--- a/public/styles/tweeter-feed.css
+++ b/public/styles/tweeter-feed.css
@@ -1,6 +1,6 @@
 #tweets-container {
   width: 100%;
-  margin-top: 5rem;
+  margin: 5rem auto;
 }
 
 .tweet-container {
